--- a/src/Imview.Core/Imview.Core.csproj
+++ b/src/Imview.Core/Imview.Core.csproj
@@ -25,4 +25,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\submodule\Imcodec\src\Imcodec.ObjectProperty\Imcodec.ObjectProperty.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\**" />
+  </ItemGroup>
 </Project>
