--- a/src/Imview.Core/Imview.Core.csproj
+++ b/src/Imview.Core/Imview.Core.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Notification.Avalonia" Version="2.1.0" />
     <PackageReference Include="ReactiveUI" Version="20.1.63" />
   </ItemGroup>
 
