feat: start work on quest packet captures

--- a/src/Imview.Core/Imview.Core.csproj
+++ b/src/Imview.Core/Imview.Core.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\submodule\Imcodec\src\Imcodec.ObjectProperty\Imcodec.ObjectProperty.csproj" />
+    <ProjectReference Include="..\Imview.PacketReader\Imview.PacketReader.csproj" />
   </ItemGroup>
 
   <ItemGroup>
